--- a/homepage.css
+++ b/homepage.css
@@ -99,12 +99,41 @@ font-weight: bold;
             padding-right: 20px;
         }
 
-        .people {
-            flex: 1; /* Take up remaining space */
-            text-align: left; /* Align content to the right */
-            padding-left: 20px; /* Add some space between text and image */
-            padding-right: 40px;
-            border-radius: 0.5px;
-            width: 100%;
-            height: 200px;
+        .custom-card {
+            flex: 1;
+            max-width: 800px;
+            border-radius: 10px;
+            margin-top: 20px;
         }
+
+        .rounded-section {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 20px;
+        }
+
+        .rounded-image {
+            flex: 1;
+            border-radius: 10px; /* Adjust the value to control the roundness of the corners */
+            max-width: 100%;
+            margin-right: 20px;
+        }
+
+
+        .text-content {
+            flex: 1;
+            max-width: 800px; /* Adjust the max-width of the paragraph container */
+        }
+
+                
+        .left-section,
+        .right-section {
+            flex: 1; /* Each section takes up equal width */
+        }
+
+        .custom-flex {
+            display: flex;
+            justify-content: space-between;
+        }
+        
