--- a/homepage.css
+++ b/homepage.css
@@ -137,3 +137,43 @@ font-weight: bold;
             justify-content: space-between;
         }
         
+
+        /* the things in qualifications */
+
+        /* to centre a span */
+        .center-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+          }
+
+          /* div of education */
+          .dived {
+            border-left: 2px solid #51505050;
+            padding: 20px;
+          }
+
+          /* card pill */
+          .round {
+            border-radius: 20px;
+            line-height: 2;
+            
+          }
+
+          /* style for headings in the education */
+          .eduhead {
+            font-size: 16px;
+            color:#7963e0 ;
+          }
+
+          .eduheadsm {
+            font-size: 12px;
+            color: #777777;
+          }
+
+          .edup {
+            font-size: 13px;
+            color: #777777;
+          }
+      
